@@ -1,5 +1,12 @@
 2006-02-03  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-main.c: (main):
+
+	Free the option context on error too, and don't duplicate
+	the private-instance option.
+
+2006-02-03  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EphyPromptService.cpp:
 
 	Don't make the nonblocking alert modal!
